<h5>2.01 Alpha 1   [WORK IN PROGRESS - NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.6
<hr>
- cosmetics (mamba)
- Add slideshow image status in admin (liomj)
- Add new options for blocks (liomj) 
- Fix Block Item Order (liomj)
- Fix Block Item Caption (liomj)
- Update Nivo and Slick JS Settings (liomj)
- Fix Smarty Errors (liomj)

<h5>Slideshow 2.0 </h5>  Dev: Xoops 2.5.10, PHP 7.2.0
- add item link target (liomj)
- add item language code (liomj)
- add item start date and end date (liomj)
- rename item_text to item_caption (liomj)
- fix deprecated constructor (liomj)
- add nivo slider and slick slider (liomj)
- remove marquee slider,sliderkit, slider scrollable (liomj)
- remove redundant block (liomj) 
- remove item_default (liomj)
- fix admin after crud redirection (liomj) 
- update redirection message language (liomj)
- fix Notice: Should call parent::__construct (liomj)
- fix empty category drop down (liomj)
- disable slideshowform if no category created (liomj)
- remove item_thumb (liomj)
- remove category showType(liomj)
- remove marquee from admin (liomj)
- rename topic to category (liomj)
- move images,css,js to asssets folder (liomj)
- change html templates to tpl templates (liomj)
