@@ -7,6 +7,8 @@
 - Fix Block Item Caption (liomj)
 - Update Nivo and Slick JS Settings (liomj)
 - Fix Smarty Errors (liomj)
+- Set Default for Item Order, StartEnd Date, Link Target Backend (liomj)
+
 
 <h5>Slideshow 2.0 </h5>  Dev: Xoops 2.5.10, PHP 7.2.0
 - add item link target (liomj)
